# Laba_OOP_4

./: CMakeLists.txt  array.h  figure.h  main.cpp  rectangle.h  square.h  tests.cpp  trapezoid.h
